# digisafe

./: .gitignore  Cargo.toml  LICENSE  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/digisafe/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/digisafe/app/: Droid.kt  MainActivity.kt
android/app/src/main/java/com/digisafe/app/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
android/app/src/main/java/com/example/digisafe/: MainActivity.kt
android/app/src/main/java/com/example/digisafe/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/digisafe/: ExampleUnitTest.kt
android/droid/: Cargo.toml  build.sh
android/droid/src/: lib.rs
android/gradle/wrapper/: gradle-wrapper.properties
linux/: Cargo.toml  digisafe.desktop  setup.sh
linux/src/: appdb.rs  crypto.rs  gui.rs  lib.rs  main.rs  security.rs  storage.rs
linux/src/db/: crypto.rs  database.rs  mod.rs
linux/src/gui/: colors.rs  components.rs  messages.rs  mod.rs  state.rs
linux/src/storage/: atlas.rs  database.rs  entry.rs  interface.rs  mod.rs  persistence.rs  persistent.rs  secret.rs  volatile.rs
linux/src/ui/: gui.rs  mod.rs
src/: appdb.rs  main.rs
