[package]
name = "digisafe2"
version = "0.2.0"
edition = "2024"

[dependencies]
apache-avro = "0.21.0"
argon2 = "0.5.3"
base64ct = "1.8.3"
chacha20poly1305 = "0.10.1"
getrandom = "0.3.4"
hex = "0.4.3"
iced = { version = "0.14", default-features = false, features = ["advanced", "canvas", "highlighter", "tiny-skia", "tokio", "wayland"] }
lz4 = "1.28.1"
memsecurity = "3.5.2"
reed-solomon = "0.2.1"
rustix = "1.1.3"
secmem-alloc = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.10.8"
tiny-skia = "0.11.4"
zeroize = "1.8.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
