[package]
name = "digisafe"
version = "0.2.0"
edition = "2024"
resolver = "3"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
argon2 = "0.5.3"
base64ct = "1.8.3"
blake3 = "1.8.3"
chacha20poly1305 = "0.10.1"
getrandom = "0.4.1"
hex = "0.4.3"
iced = { version = "0.14", default-features = false, features = ["advanced", "canvas", "highlighter", "tiny-skia", "tokio", "wayland"] }
libc = "0.2.180"
lz4 = "1.28.1"
reed-solomon-erasure = { version = "6.0.0", features = ["simd-accel"] }
reqwest = { version = "0.13.1", default-featrues = false, features = ["charset", "rustls", "json"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sha3 = "0.10.8"
tiny-skia = "0.12.0"
zeroize = "1.8.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
